--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-leap-day
 title: Loreen's github pages
 description: Interesting assignments and data visualizations.
+![Data Visualization] (https://hbr.org/2016/06/visualizations-that-really-work)
